Code quality: fixed instantiating Long.