@@ -164,7 +164,7 @@ public class BuildFarmAgent implements Serializable {
     _hashCode += ID;
     _hashCode += agentID;
     _hashCode += farmID;
-    _hashCode += new Long(timeStamp).hashCode();
+    _hashCode += Long.valueOf(timeStamp).hashCode();
     __hashCodeCalc = false;
     return _hashCode;
   }
