@@ -655,7 +655,7 @@ public class BuildRun implements Serializable {
     if (syncNote != null) {
       _hashCode += syncNote.hashCode();
     }
-    _hashCode += new Long(timeStamp).hashCode();
+    _hashCode += Long.valueOf(timeStamp).hashCode();
     _hashCode += type;
     __hashCodeCalc = false;
     return _hashCode;
