@@ -197,7 +197,7 @@ public class DisplayGroup implements Serializable {
     if (name != null) {
       _hashCode += name.hashCode();
     }
-    _hashCode += new Long(timeStamp).hashCode();
+    _hashCode += Long.valueOf(timeStamp).hashCode();
     __hashCodeCalc = false;
     return _hashCode;
   }
